[metadata]
name = fast-encrypt
version = 1.0.0
author = Alberto Frigatto
author_email = albertofrigattoferreira@gmail.com
description = fast-encrypt is a comprehensive Python library that offers a variety of cryptographic methods to protect sensitive data simply and effectively.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Alberto-Frigatto/fast-encrypt
project_urls =
    Bug Tracker = https://github.com/Alberto-Frigatto/fast-encrypt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
